--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "next": "14.2.8",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
